Log changes + storecopy changes

--- a/neo4j.properties
+++ b/neo4j.properties
@@ -1,5 +1,6 @@
-dbms.pagecache.memory=2G
+dbms.pagecache.memory=10G
 dbms.pagecache.memory.source=2G
+dbms.allow_format_migration=true
 
 cache_type=none
 allow_store_upgrade=true
